--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -1,4 +1,5 @@
 .NavbarItems {
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,6 +8,11 @@
   width: 95%;
   height: 80px;
   border-radius: 13px;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 9999;
 }
 
 .navbar-logo {
@@ -63,6 +69,10 @@ button:hover {
   color: #fff;
 }
 
+.menu-icons {
+  display: none;
+}
+
 @media screen and (max-width: 850px) {
   .NavbarItems {
     z-index: 99;
@@ -82,12 +92,15 @@ button:hover {
     padding: 80px 0 30px 0;
     margin: 0;
     align-items: stretch;
+    transition: all 0.3s ease-in-out;
+    border-radius: 13px;
   }
 
   .nav-menu.active {
     left: 0;
     opacity: 1;
     z-index: -1;
+    transition: all 0.3s ease-in-out;
   }
 
   .nav-links {
@@ -119,5 +132,15 @@ button:hover {
     font-size: 1.2rem;
     font-weight: 700;
     letter-spacing: 2px;
+  }
+
+  .menu-icons {
+    display: block;
+    cursor: pointer;
+  }
+
+  .menu-icons i {
+    font-size: 1.2rem;
+    color: #222;
   }
 }
